--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "highlight.js": "^9.12.0",
     "less-loader": "^4.1.0",
     "vue": "^2.5.16",
-    "vue-highlight.js": "^2.2.0",
-    "vuepress": "^1.5.0"
+    "vue-highlight.js": "^2.2.0"
   },
   "devDependencies": {
     "less": "^3.0.2",
